--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,33 @@
+
 body{
-    background-color: #000000;
+    background-color: #000000
+}
+.icon-text{
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    display: block;
+    color: rgb(248, 239, 227);
+}
+p{
+    color: white;
+}
+.header-link{
+    margin: 15px;
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    text-decoration: underline black;
+    font-size: 12px;
+}
+.header-link:hover{
+    text-decoration: underline rgb(248, 239, 227);
+}
+.icon{
+    margin: 10px;
+    margin-bottom: 5px;
+    height: 30px;
 }
 .img{
     position: absolute;
     top: 35%;
-    left: 35%;
+    left: 32%;
 }
