--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,15 +1,18 @@
-
+/**
+html black background
+*/
 body{
     background-color: #000000
 }
+/**
+text under pathway icons
+*/
 .icon-text{
     font-family: 'ZCOOL QingKe HuangYou', cursive;
     display: block;
     color: rgb(248, 239, 227);
 }
-p{
-    color: white;
-}
+
 .header-link{
     margin: 15px;
     vertical-align: top;
@@ -28,6 +31,7 @@ p{
 }
 .img{
     position: absolute;
-    top: 35%;
-    left: 32%;
+    top: 50%;
+    left: 33%;
+    width: 400px;
 }
