--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,19 +1,42 @@
-/**
-html black background
-*/
-body{
-    background-color: #000000
+
+/*=============================================
+=            HTML BLACK BACKGROUND            =
+=============================================*/
+
+html{
+    background-color: #000000;
 }
-/**
-text under pathway icons
-*/
+
+/*=============================================
+=                 ICON HEADER                 =
+=============================================*/
+
+.icons{
+    background-color: #000000;
+}
+
+
+/*=============================================
+=                ICON PICTURES                =
+=============================================*/
+
+.icon:hover{
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+}
+
+/*=============================================
+=         TEXT UNDER PATH WAY ICONS           =
+=============================================*/
+
 .icon-text{
     font-family: 'ZCOOL QingKe HuangYou', cursive;
     display: block;
     color: rgb(248, 239, 227);
 }
 
-.header-link{
+.icon-links{
     margin: 15px;
     vertical-align: top;
     display: inline-block;
@@ -21,7 +44,7 @@ text under pathway icons
     text-decoration: underline black;
     font-size: 12px;
 }
-.header-link:hover{
+.icon-links:hover{
     text-decoration: underline rgb(248, 239, 227);
 }
 .icon{
@@ -29,9 +52,40 @@ text under pathway icons
     margin-bottom: 5px;
     height: 30px;
 }
+
+/*=============================================
+=               JUMBOTRON HEADER              =
+=============================================*/
+
+#intro-header{
+    background: black;
+}
+
+#intro-text-title{
+    font-size: 20px;
+    font-family: 'Source Code Pro', monospace;
+}
+
+#intro-text{
+    color: white;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
+}
+
+.display-4 {
+    color:white;
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+/*=============================================
+=              SAD MAN GIF IMAGE              =
+=============================================*/
+
 .img{
     position: absolute;
     top: 50%;
-    left: 33%;
+    left: 36%;
     width: 400px;
 }
