--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,14 +62,14 @@ html{
 }
 
 #intro-text-title{
-    font-size: 20px;
+    font-size: 50px;
     font-family: 'Source Code Pro', monospace;
 }
 
 #intro-text{
     color: white;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 15px;
+    font-family: 'Source Code Pro', monospace;
+    font-size: 10px;
 }
 
 .display-4 {
